--- a/templates/ConfluenceDataCenterClone.template.yaml
+++ b/templates/ConfluenceDataCenterClone.template.yaml
@@ -1862,7 +1862,7 @@ Resources:
           FromPort: 25500
           ToPort: 25500
           CidrIp: !Ref CidrBlock
-          Description: 'Confluence Collaborative Editing clustering (Aleph)'
+          Description: 'Confluence Collaborative Editing cluster base port (Aleph)'
         - IpProtocol: tcp
           FromPort: 5801
           ToPort: 5801
