--- a/quickstarts/quickstart-confluence-master.template.yaml
+++ b/quickstarts/quickstart-confluence-master.template.yaml
@@ -1586,6 +1586,7 @@ Resources:
           Value: !Ref SynchronyClusterNodeGroup
       ComparisonOperator: LessThanThreshold
 # Elastic file system
+# EFS isn't available in all AWS regions; check https://aws.amazon.com/about-aws/global-infrastructure/regional-product-services/ to ensure your target region is supported
   ElasticFileSystem:
     Type: AWS::EFS::FileSystem
     Properties:
