--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,8 +7,8 @@ pipelines:
         script:
             - echo 'only running CI on ITOPS branches for now'
   branches:
-    'ITOPS-*': &ci_pipeline
-        - step:
+    'ITOPS-*':
+        - step: &ci_build_step
             name: Build Atlassian Services AWS Environment (VPC + tooling) from quickstart (if doesnt exist)
             script:
               - export CIHOME=$(pwd)
@@ -250,4 +250,7 @@ pipelines:
               - aws s3 rm s3://${CI_S3_OUTPUT_BUCKET}/quickstarts/${BITBUCKET_BUILD_NUMBER} --recursive
               # cleanup MASTERSTACK
               - aws cloudformation delete-stack --stack-name $MASTERSTACK
-  'DCD-*': *ci_pipeline
+  'DCD-*':
+    - step:
+      <<: *ci_build_step
+      name: Build Atlassian Services AWS Environment (VPC + tooling) from quickstart (if doesnt exist) on DCD branch
