--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,7 +7,7 @@ pipelines:
         script:
             - echo 'only running CI on ITOPS branches for now'
   branches:
-    'ITOPS-*':
+    'ITOPS-*': &ci_pipeline
         - step: &ci_build_step
             name: Build Atlassian Services AWS Environment (VPC + tooling) from quickstart (if doesnt exist)
             script:
@@ -251,6 +251,4 @@ pipelines:
               # cleanup MASTERSTACK
               - aws cloudformation delete-stack --stack-name $MASTERSTACK
     'DCD-*':
-      - step:
-          <<: *ci_build_step
-          name: Build Atlassian Services AWS Environment (VPC + tooling) from quickstart (if doesnt exist) on DCD branch
+      <<: *ci_pipeline
