--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -250,5 +250,4 @@ pipelines:
               - aws s3 rm s3://${CI_S3_OUTPUT_BUCKET}/quickstarts/${BITBUCKET_BUILD_NUMBER} --recursive
               # cleanup MASTERSTACK
               - aws cloudformation delete-stack --stack-name $MASTERSTACK
-    'DCD-*':
-        - *ci_pipeline
+    'DCD-*': *ci_pipeline
