ITOPS-1251 adding s3:PutObjectAcl permission for the btf-analytics bucket

--- a/quickstarts/quickstart-jira-master.template.yaml
+++ b/quickstarts/quickstart-jira-master.template.yaml
@@ -937,6 +937,9 @@ Resources:
                   - "arn:aws:route53:::change/*"
                   - "arn:aws:route53:::hostedzone/*"
                   - "arn:aws:route53:::delegationset/*"
+              - Action: ['s3:PutObjectAcl']
+                Effect: Allow
+                Resource: ['arn:aws:s3:::btf-analytics/*']
   JiraClusterNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
