--- a/templates/ConfluenceServerClone.template.yaml
+++ b/templates/ConfluenceServerClone.template.yaml
@@ -909,6 +909,9 @@ Resources:
               - Action: ['s3:Get*']
                 Effect: Allow
                 Resource: ['arn:aws:s3:::/atlassian-software/snapshots/confluence/*']
+              - Action: ['s3:PutObjectAcl']
+                Effect: Allow
+                Resource: ['arn:aws:s3:::btf-analytics/*']
   ConfluenceServerInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
