ITOPS-1251 also adding to Bitbucket templates and quickstart

--- a/templates/BitbucketServer.template.yaml
+++ b/templates/BitbucketServer.template.yaml
@@ -408,6 +408,9 @@ Resources:
                 Effect: Allow
                 Resource:
                   - '*'
+              - Action: ['s3:PutObjectAcl']
+                Effect: Allow
+                Resource: ['arn:aws:s3:::btf-analytics/*']
   BitbucketInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
