--- a/templates/BitbucketDataCenter.template.yaml
+++ b/templates/BitbucketDataCenter.template.yaml
@@ -582,6 +582,9 @@ Resources:
               - Action: ["ec2:DescribeInstances"]
                 Effect: Allow
                 Resource: ["*"]
+              - Action: ['s3:PutObjectAcl']
+                Effect: Allow
+                Resource: ['arn:aws:s3:::btf-analytics/*']
   BitbucketFileServerInstanceProfile:
     Type: "AWS::IAM::InstanceProfile"
     Properties:
