--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -261,6 +261,11 @@ pipelines:
             script:
                 - apk update
                 - apk --no-cache add python py-pip py-setuptools ca-certificates curl groff less jq
+                - apk add --no-cache python3
+                - python3 -m ensurepip && rm -r /usr/lib/python*/ensurepip && pip3 install --upgrade pip setuptools
+                - if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi
+                - if [[ ! -e /usr/bin/python ]]; then ln -sf /usr/bin/python3 /usr/bin/python; fi
+                -  rm -r /root/.cache
                 - pip --no-cache-dir install awscli taskcat
                 - aws configure set default.aws_secret_access_key ${CI_SECRET_ACCESS_KEY}
                 - aws configure set default.aws_access_key_id ${CI_ACCESS_KEY_ID}
@@ -270,4 +275,4 @@ pipelines:
                 - cd quickstarts/jira
                 - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"--REPLACE-KEY-ID-HERE--\"}]" | sed -e s/--REPLACE-KEY-ID-HERE--/$AWS_ACCESS_KEY/g > ci/taskcat_project_override.json
                 - cat ci/taskcat_project_override.json
-                - taskcat -c ci/taskcat.yml
+                - taskcat -l -c ci/taskcat.yml
