--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -258,14 +258,15 @@ pipelines:
                 - echo 'Setup VPC here'
         - step:
             name: Taskcat run jira
+            image: frolvlad/alpine-python3
             script:
                 - apk update
-                - apk --no-cache add python py-pip py-setuptools ca-certificates curl groff less jq
-                - apk add --no-cache python3
-                - python3 -m ensurepip && rm -r /usr/lib/python*/ensurepip && pip3 install --upgrade pip setuptools
-                - if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi
-                - if [[ ! -e /usr/bin/python ]]; then ln -sf /usr/bin/python3 /usr/bin/python; fi
-                -  rm -r /root/.cache
+#                - apk --no-cache add python py-pip py-setuptools ca-certificates curl groff less jq
+#                - apk add --no-cache python3
+#                - python3 -m ensurepip && rm -r /usr/lib/python*/ensurepip && pip3 install --upgrade pip setuptools
+#                - if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi
+#                - if [[ ! -e /usr/bin/python ]]; then ln -sf /usr/bin/python3 /usr/bin/python; fi
+#                -  rm -r /root/.cache
                 - pip --no-cache-dir install awscli taskcat
                 - aws configure set default.aws_secret_access_key ${CI_SECRET_ACCESS_KEY}
                 - aws configure set default.aws_access_key_id ${CI_ACCESS_KEY_ID}
@@ -273,6 +274,6 @@ pipelines:
                 - export AWS_SECRET_KEY=${CI_SECRET_ACCESS_KEY}
                 - export AWS_ACCESS_KEY=${CI_ACCESS_KEY_ID}
                 - cd quickstarts/jira
-                - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"--REPLACE-KEY-ID-HERE--\"}]" | sed -e s/--REPLACE-KEY-ID-HERE--/$AWS_ACCESS_KEY/g > ci/taskcat_project_override.json
+                - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$AWS_ACCESS_KEY\"}]" > ci/taskcat_project_override.json
                 - cat ci/taskcat_project_override.json
                 - taskcat -l -c ci/taskcat.yml
