--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -260,46 +260,46 @@ pipelines:
         - parallel:
           - step:
               name: Taskcat run jira
-              image: frolvlad/alpine-python3
+              image: python:3.6-alpine
               script:
                   - apk update
                   - pip --no-cache-dir install awscli taskcat
-                  - aws configure set default.aws_secret_access_key ${CI_SECRET_ACCESS_KEY}
-                  - aws configure set default.aws_access_key_id ${CI_ACCESS_KEY_ID}
+                  - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
+                  - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
                   - aws configure set default.region ${CI_DEFAULT_REGION}
-                  - export AWS_SECRET_KEY=${CI_SECRET_ACCESS_KEY}
-                  - export AWS_ACCESS_KEY=${CI_ACCESS_KEY_ID}
+                  - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
+                  - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
                   - cd quickstarts/jira
-                  - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$AWS_ACCESS_KEY\"}]" > ci/taskcat_project_override.json
+                  - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
                   - cat ci/taskcat_project_override.json
                   - taskcat -l -c ci/taskcat.yml
           - step:
               name: Taskcat run confluence
-              image: frolvlad/alpine-python3
+              image: python:3.6-alpine
               script:
                   - apk update
                   - pip --no-cache-dir install awscli taskcat
-                  - aws configure set default.aws_secret_access_key ${CI_SECRET_ACCESS_KEY}
-                  - aws configure set default.aws_access_key_id ${CI_ACCESS_KEY_ID}
+                  - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
+                  - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
                   - aws configure set default.region ${CI_DEFAULT_REGION}
-                  - export AWS_SECRET_KEY=${CI_SECRET_ACCESS_KEY}
-                  - export AWS_ACCESS_KEY=${CI_ACCESS_KEY_ID}
+                  - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
+                  - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
                   - cd quickstarts/confluence
-                  - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$AWS_ACCESS_KEY\"}]" > ci/taskcat_project_override.json
+                  - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
                   - cat ci/taskcat_project_override.json
                   - taskcat -l -c ci/taskcat.yml
           - step:
               name: Taskcat run bitbucket
-              image: frolvlad/alpine-python3
+              image: python:3.6-alpine
               script:
                   - apk update
                   - pip --no-cache-dir install awscli taskcat
-                  - aws configure set default.aws_secret_access_key ${CI_SECRET_ACCESS_KEY}
-                  - aws configure set default.aws_access_key_id ${CI_ACCESS_KEY_ID}
+                  - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
+                  - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
                   - aws configure set default.region ${CI_DEFAULT_REGION}
-                  - export AWS_SECRET_KEY=${CI_SECRET_ACCESS_KEY}
-                  - export AWS_ACCESS_KEY=${CI_ACCESS_KEY_ID}
+                  - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
+                  - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
                   - cd quickstarts/bitbucket
-                  - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$AWS_ACCESS_KEY\"}]" > ci/taskcat_project_override.json
+                  - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
                   - cat ci/taskcat_project_override.json
                   - taskcat -l -c ci/taskcat.yml
